Changes on license code to GPL-3.0-or-later

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -12,7 +12,7 @@ description: Collection of macOS automation tools for Ansible.
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
 license:
-  - gnu
+  - GPL-3.0-or-later
 
 # A list of tags you want to associate with the collection for indexing/searching. A tag name has the same character
 # requirements as 'namespace' and 'name'
